--- a/tabs.html
+++ b/tabs.html
@@ -31,125 +31,155 @@
         </button>
       </div>
       <div class="content" id="content1">
-        <div class="content-left">
-          <h4 class="mb-4">SEARCH FOR FLIGHTS</h4>
-          <div class="form-group">
-            <label>Name <sup class="text-danger">*</sup></label>
-            <input
-              type="text"
-              id="name"
-              class="form-control"
-              placeholder="Your Name"
-            />
-          </div>
-          <div class="form-group">
-            <label>E-mail</label>
-            <input
-              type="email"
-              id="email"
-              class="form-control"
-              placeholder="ex: yourmail@gmail.com"
-            />
-          </div>
-          <div class="row">
-            <div class="col-6">
-              <div class="form-group">
-                <label>From <sup class="text-danger">*</sup></label>
-                <select class="form-control" id="from">
-                  <option value="" selected disabled
-                    >-- Choose origin --</option
+        <form class="needs-validation" novalidate>
+          <div class="content-left">
+            <h4 class="mb-4">SEARCH FOR FLIGHTS</h4>
+            <div class="form-group">
+              <label for="name">Name <sup class="text-danger">*</sup></label>
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                placeholder="Your Name"
+                required
+              />
+              <div class="invalid-feedback">Please provide a valid city.</div>
+            </div>
+            <div class="form-group">
+              <label for="email">E-mail</label>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                placeholder="ex: yourmail@gmail.com"
+                required
+              />
+              <div class="invalid-feedback">Please provide a valid city.</div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="from"
+                    >From <sup class="text-danger">*</sup></label
                   >
-                  <option value="Cambodia">Cambodia</option>
-                  <option value="Indonesia">Indonesia</option>
-                </select>
+                  <select class="form-control" id="from" required>
+                    <option value="" selected disabled>
+                      -- Choose origin --
+                    </option>
+                    <option value="Cambodia">Cambodia</option>
+                    <option value="Indonesia">Indonesia</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please provide a valid city.
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="to">To <sup class="text-danger">*</sup></label>
+                  <select class="form-control" id="to" required>
+                    <option value="" selected disabled>
+                      -- Choose destination --
+                    </option>
+                    <option value="Cambodia">Cambodia</option>
+                    <option value="Indonesia">Indonesia</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please provide a valid city.
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="col-6">
-              <div class="form-group">
-                <label>To <sup class="text-danger">*</sup></label>
-                <select class="form-control" id="to">
-                  <option value="" selected disabled
-                    >-- Choose destination --</option
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="adults"
+                    >Adults <sup class="text-danger">*</sup></label
                   >
-                  <option value="Cambodia">Cambodia</option>
-                  <option value="Indonesia">Indonesia</option>
-                </select>
+                  <select class="form-control" id="adults" required>
+                    <option value="" selected disabled>
+                      -- Choose adults --
+                    </option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please provide a valid city.
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="children"
+                    >Children <sup class="text-danger">*</sup></label
+                  >
+                  <select class="form-control" id="children" required>
+                    <option value="" selected disabled>
+                      -- Choose children --
+                    </option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                  </select>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-6">
-              <div class="form-group">
-                <label>Adults <sup class="text-danger">*</sup></label>
-                <select class="form-control" id="adults">
-                  <option value="" selected disabled
-                    >-- Choose adults --</option
-                  >
-                  <option value="01">01</option>
-                  <option value="02">02</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="form-group">
-                <label>Children <sup class="text-danger">*</sup></label>
-                <select class="form-control" id="children">
-                  <option value="" selected disabled
-                    >-- Choose children --</option
-                  >
-                  <option value="01">01</option>
-                  <option value="02">02</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label>Travel Class <sup class="text-danger">*</sup></label>
-            <select class="form-control" id="travel">
-              <option value="" selected disabled
-                >-- Choose travel class --</option
+            <div class="form-group">
+              <label for="travel"
+                >Travel Class <sup class="text-danger">*</sup></label
               >
-              <option value="Economy Class">Economy class</option>
-              <option value="Business Class">Business class</option>
-            </select>
-          </div>
-          <div class="row">
-            <div class="col-6">
-              <div class="form-group">
-                <label>Departure On <sup class="text-danger">*</sup></label>
-                <input type="date" id="departure" class="form-control" />
-              </div>
+              <select class="form-control" id="travel" required>
+                <option value="" selected disabled>
+                  -- Choose travel class --
+                </option>
+                <option value="Economy Class">Economy class</option>
+                <option value="Business Class">Business class</option>
+              </select>
             </div>
-            <div class="col-6">
-              <div class="form-group">
-                <label>Journey type <sup class="text-danger">*</sup></label>
-                <select class="form-control" id="journey">
-                  <option value="" selected disabled
-                    >-- Choose journey type --</option
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="departure"
+                    >Departure On <sup class="text-danger">*</sup></label
                   >
-                  <option value="One Way">One Way</option>
-                  <option value="Two Way">Two Way</option>
-                </select>
+                  <input
+                    type="date"
+                    id="departure"
+                    class="form-control"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="journey"
+                    >Journey type <sup class="text-danger">*</sup></label
+                  >
+                  <select class="form-control" id="journey" required>
+                    <option value="" selected disabled>
+                      -- Choose journey type --
+                    </option>
+                    <option value="One Way">One Way</option>
+                    <option value="Two Way">Two Way</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-4">
+              <div class="col-12 col-md-2">
+                <div class="form-group">
+                  <button
+                    type="submit"
+                    class="btn btn-info btn-lg btn-block"
+                    tabindex="4"
+                    data-toggle="modal"
+                  >
+                    Search
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="row mt-4">
-            <div class="col-12 col-md-2">
-              <div class="form-group">
-                <button
-                  type="submit"
-                  onclick="Show()"
-                  class="btn btn-info btn-lg btn-block"
-                  tabindex="4"
-                  data-toggle="modal"
-                  data-target="#exampleModal"
-                >
-                  Search
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+        </form>
         <div class="content-right">
           <img src="flight.png" alt="Flight" />
         </div>
@@ -181,9 +211,9 @@
               <div class="form-group">
                 <label>From <sup class="text-danger">*</sup></label>
                 <select class="form-control" id="from_">
-                  <option value="" selected disabled
-                    >-- Choose origin --</option
-                  >
+                  <option value="" selected disabled>
+                    -- Choose origin --
+                  </option>
                   <option value="Cambodia">Cambodia</option>
                   <option value="Indonesia">Indonesia</option>
                 </select>
@@ -193,9 +223,9 @@
               <div class="form-group">
                 <label>To <sup class="text-danger">*</sup></label>
                 <select class="form-control" id="to_">
-                  <option value="" selected disabled
-                    >-- Choose destination --</option
-                  >
+                  <option value="" selected disabled>
+                    -- Choose destination --
+                  </option>
                   <option value="Cambodia">Cambodia</option>
                   <option value="Indonesia">Indonesia</option>
                 </select>
@@ -207,9 +237,9 @@
               <div class="form-group">
                 <label>Adults <sup class="text-danger">*</sup></label>
                 <select class="form-control" id="adults_">
-                  <option value="" selected disabled
-                    >-- Choose adults --</option
-                  >
+                  <option value="" selected disabled>
+                    -- Choose adults --
+                  </option>
                   <option value="01">01</option>
                   <option value="02">02</option>
                 </select>
@@ -219,9 +249,9 @@
               <div class="form-group">
                 <label>Children <sup class="text-danger">*</sup></label>
                 <select class="form-control" id="children_">
-                  <option value="" selected disabled
-                    >-- Choose children --</option
-                  >
+                  <option value="" selected disabled>
+                    -- Choose children --
+                  </option>
                   <option value="01">01</option>
                   <option value="02">02</option>
                 </select>
@@ -231,9 +261,9 @@
           <div class="form-group">
             <label>Travel Class <sup class="text-danger">*</sup></label>
             <select class="form-control" id="travel_">
-              <option value="" selected disabled
-                >-- Choose travel class --</option
-              >
+              <option value="" selected disabled>
+                -- Choose travel class --
+              </option>
               <option value="Economy Class">Economy class</option>
               <option value="Business Class">Business class</option>
             </select>
@@ -249,9 +279,9 @@
               <div class="form-group">
                 <label>Journey type <sup class="text-danger">*</sup></label>
                 <select class="form-control" id="journey_">
-                  <option value="" selected disabled
-                    >-- Choose journey type --</option
-                  >
+                  <option value="" selected disabled>
+                    -- Choose journey type --
+                  </option>
                   <option value="One Way">One Way</option>
                   <option value="Two Way">Two Way</option>
                 </select>
@@ -376,7 +406,7 @@
         content2.style.transitionDelay = "0.3s";
       }
 
-      function Show() {
+      function Process() {
         let name = $("#name").val();
         let email = $("#email").val();
         let from = $("#from").val();
@@ -396,6 +426,8 @@
         $("#result_travel").html(travel);
         $("#result_departure").html(departure);
         $("#result_journey").html(journey);
+
+        $("#exampleModal").modal("show");
       }
 
       function PopUp() {
@@ -419,6 +451,40 @@
         $("#result_departure").html(departure);
         $("#result_journey").html(journey);
       }
+    </script>
+
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+        "use strict";
+        window.addEventListener(
+          "load",
+          function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName("needs-validation");
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (
+              form
+            ) {
+              form.addEventListener(
+                "submit",
+                function (event) {
+                  if (form.checkValidity() === false) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                  } else {
+                    Process();
+                    event.preventDefault();
+                  }
+                  form.classList.add("was-validated");
+                },
+                false
+              );
+            });
+          },
+          false
+        );
+      })();
     </script>
   </body>
 </html>
